<resources>
    <string name="app_name">BarberMap</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="acceder">Iniciar Sesión</string>
    <string name="crear_cuenta">¿No tienes una cuenta? Registrate</string>
    <string name="descript_img">Imagen error</string>
    <string name="update">Actualizar Información</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agendar">Agendar</string>
    <string name="horarios_disponible">Horarios disponible</string>
    <string name="seleccionar_dia">Seleccionar día</string>
    <string name="selecciona_fecha">Selecciona tu fecha</string>
    <string name="selecciona_barbero">Selecciona Barbero</string>
    <string name="tipo_corte">Tipo de Corte</string>
</resources>